--- a/index.html
+++ b/index.html
@@ -3,9 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Login</title>
+    <link rel="stylesheet" href="./style/main.css">
 </head>
 <body>
+    <div class="container">
+        <img src="./images/Intex-market.uz.png" alt="market-logo-images">
+        <h2>Введите имя пользователя и пароль, чтобы <br> получить доступ к системе.</h2>
+        <form class="login-form" >
+            <input autocomplete="off" type="text" name="username" placeholder="Имя пользователя">
+            <input autocomplete="off" type="password" name="password" placeholder="Пароль">
+            <a style="text-decoration: none; font-size: 25px;color: blue;" href="./register.html">Forgot password</a>
+            <button type="submit">Войти</a></button>
+        </form>
+        
+    </div>
+
     
+    <script src="./login.js"></script>
 </body>
 </html>
